--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.6.2)
+cmake_minimum_required(VERSION 3.8.0)
 
 project(Universe)
 
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 11)
 file(GLOB_RECURSE DEMO_INCLUDE *.hpp *.h)
 file(GLOB_RECURSE DEMO_SOURCE *.cpp)
 
-add_executable(Universe ${DEMO_INCLUDE} ${DEMO_SOURCE})
-target_link_libraries(Universe AntiQuark)
+add_library(Universe ${DEMO_INCLUDE} ${DEMO_SOURCE})
+#target_link_libraries(Universe AntiQuark)
 
 include_directories(${ENGINE_ROOT})
