--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,8 +1,10 @@
-cmake_minimum_required(VERSION 3.6.2)
+cmake_minimum_required(VERSION 3.8.0)
 
 project(AntiQuark)
 
 set(CMAKE_CXX_STANDARD 11)
+
+find_package(Vulkan REQUIRED FATAL_ERROR)
 
 file(GLOB_RECURSE ENGINE_INCLUDE_CORE "${ENGINE_ROOT}/Core/*.hpp" "${ENGINE_ROOT}/Core/*.h")
 file(GLOB_RECURSE ENGINE_SOURCE_CORE "${ENGINE_ROOT}/Core/*.cpp" "${ENGINE_ROOT}/Core/*.c")
@@ -36,16 +38,28 @@ file(GLOB_RECURSE ENGINE_SOURCE_SOUND "${ENGINE_ROOT}/Sound/*.cpp" "${ENGINE_ROO
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${ENGINE_INCLUDE_SOUND} ${ENGINE_SOURCE_SOUND} )
 set(SOUND_FILES ${ENGINE_INCLUDE_SOUND} ${ENGINE_SOURCE_SOUND})
 
-add_library(AntiQuark ${CORE_FILES} ${INPUT_FILES} ${PROFILING_FILES} ${RENDERER_FILES_ALL} ${SCRIPTING_FILES} ${SOUND_FILES})
+file(GLOB_RECURSE ENGINE_INCLUDE_GAMEPLAY "${ENGINE_ROOT}/Gameplay/*.hpp" "${ENGINE_ROOT}/Gameplay/*.h")
+file(GLOB_RECURSE ENGINE_SOURCE_GAMEPLAY "${ENGINE_ROOT}/Gameplay/*.cpp" "${ENGINE_ROOT}/Gameplay/*.c")
+source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${ENGINE_INCLUDE_GAMEPLAY} ${ENGINE_SOURCE_GAMEPLAY} )
+set(GAMEPLAY_FILES ${ENGINE_INCLUDE_GAMEPLAY} ${ENGINE_SOURCE_GAMEPLAY})
+
+add_executable(AntiQuark ${CORE_FILES} ${INPUT_FILES} ${PROFILING_FILES} ${RENDERER_FILES_ALL} ${SCRIPTING_FILES} ${SOUND_FILES} ${GAMEPLAY_FILES})
 
 #add_subdirectory(Libraries/cereal/)
 include_directories(${ENGINE_ROOT}/Libraries/cereal/include/)
 include_directories(${ENGINE_ROOT}/Libraries/entt/single_include/)
 include_directories(${ENGINE_ROOT}/Libraries/glfw/include/)
 include_directories(${ENGINE_ROOT}/Libraries/taskflow/)
+include_directories(${ENGINE_ROOT}/Libraries/json/single_include/)
+include_directories(${Vulkan_INCLUDE_DIR})
+
 add_subdirectory(Libraries/glfw/)
 #add_subdirectory(Libraries/taskflow/)
 
 include_directories(${ENGINE_ROOT})
 
-target_link_libraries(AntiQuark glfw)
+target_link_libraries(AntiQuark Universe glfw)
+target_link_libraries (AntiQuark ${Vulkan_LIBRARY})
+set_target_properties(
+    AntiQuark PROPERTIES
+    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/Data")
